refactor BASE64Decoder & BASE64Encoder